# StreamDeck

./: README.md
1-Hardware/: BOM.md  BOM_ENG.md  BOM_PCB.csv  BOM_fr.md  README1.md
1-Hardware/Fichier Kicad, Kicad Files/: streamdeckpcb.kicad_pcb  streamdeckpcb.kicad_pro  streamdeckpcb.kicad_sch
1-Hardware/Gerbers, Drill/: streamdeckpcb-B_Cu.gbr  streamdeckpcb-B_Mask.gbr  streamdeckpcb-B_Paste.gbr  streamdeckpcb-B_Silkscreen.gbr  streamdeckpcb-Edge_Cuts.gbr  streamdeckpcb-F_Cu.gbr  streamdeckpcb-F_Mask.gbr  streamdeckpcb-F_Paste.gbr  streamdeckpcb-F_Silkscreen.gbr  streamdeckpcb-NPTH.drl  streamdeckpcb-PTH.drl  streamdeckpcb-job.gbrjob
2-Software/: README2.md  action_executor.py  agent.py  audio_manager.py  config.py  logger.py  pomodoro.py  requirements.txt  serial_manager.py  spotify_monitor.py  system_monitor.py  ws_bridge.py
3-Frimware/: App.cpp  App.h  Config.h  Dwin.cpp  Dwin.h  HidActions.cpp  HidActions.h  Input.cpp  Input.h  SerialConfig.cpp  SerialConfig.h  State.cpp  State.h  Ui.cpp  Ui.h  code.ino
3-firmware/: platformio.ini
3-firmware/include/: button.h  config.h  dwin.h  nvs_manager.h  pot.h  protocol.h
3-firmware/src/: main.cpp
4-Modele/: KORE_DECK_CASE.step  KORE_DECK_Plate.step
5-App/: README5.md
5-App/KoreDeck_App/: README.md  index.html  package-lock.json  package.json  vite.config.ts
5-App/KoreDeck_App/src-tauri/: Cargo.toml  tauri.conf.json
5-App/KoreDeck_App/src-tauri/icons/: icon.icns
5-App/KoreDeck_App/src-tauri/migrations/: 001_init.sql
5-App/KoreDeck_App/src-tauri/src/: lib.rs  main.rs
(+15 files in other folders)
