[package]
name = "kore-deck"
version = "2.0.0"
description = "Kore Deck — Application de configuration"
authors = ["Kore Deck"]
edition = "2021"

[lib]
name = "kore_deck_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-sql   = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-fs    = { version = "2" }
tauri-plugin-opener = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serialport         = "4"
chrono             = { version = "0.4", features = ["serde"] }
log                = "0.4"
env_logger         = "0.11"

